--- a/style.css
+++ b/style.css
@@ -4,7 +4,34 @@
     box-sizing: border-box;
     font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
-/* */
+
+h1{
+    font-size: 50px;
+    line-height: 64px;
+    color: #222;
+}
+
+h2{
+    font-size: 46px;
+    line-height: 54px;
+    color: #222;
+}
+
+h4{
+    font-size: 20px;
+}
+
+h5{
+    font-size: 12px;
+    font-weight: 700;
+}
+
+p{
+    font-size: 16px;
+    color: #465b52;
+    margin: 15px 0 20px 0;
+}
+
 #header {
     display: flex;
     align-items: center;
@@ -50,7 +77,7 @@
 
 .header-logo img{
     width: 60px;
-    height: 50px;
+    height: 70px;
 }
 
 .header-list-icon a{
@@ -73,3 +100,312 @@
     bottom: -4px;
     left: 20px;
 } 
+
+#hero{
+    background-image: url(/Images/bg.jpg);
+    /* background-color: #e15b7c; */
+    height: 100vh;
+    width: 100%;
+    background-size: cover;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-end;
+    justify-content: center;
+    padding: 0 80px;
+}
+
+#hero h4{
+    padding-bottom: 15px;
+    font-size: 40px;
+}
+
+#hero h2{
+    font-size: 70px;
+}
+
+#hero h1{
+    color: #088178;
+    font-size: 70px;
+}
+
+#hero button{
+    background-color: transparent;
+    /* background-color: antiquewhite; */
+    height: 60px;
+    width: 260px;
+    border: 0;
+    cursor: pointer;
+    font-size: 20px;
+    font-weight: 700;
+    /* color: #e15b7c; */
+    color: antiquewhite;
+    padding: 14px 65px 14px 65px;
+}
+
+#features{
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+}
+
+#features .f-box{
+    width: 180px;
+    /* height: 100px; */
+    align-items: center;
+    padding: 25px;
+    border: 1px solid #cce7d0;
+    margin: 15px 0;
+    box-shadow: 20px 20px 34px rgba(0, 0, 0, 0.1);
+    transition: box-shadow 0.3s;
+    transition: transform 0.2s;
+}
+
+#features .f-box:hover{
+    transform: scale(1.1);
+    box-shadow: 10px 10px 54px rgba(0, 0, 0, 0.3);
+    cursor: pointer;
+}
+
+#features .f-box img{
+    height:24vh;
+    width: 100%;
+    margin-bottom: 10px;
+}
+
+#features .f-box h6{
+    display: inline-block;
+    padding: 9px 8px 6px 8px;
+    line-height: 1;
+    font-size: 14px;
+    border-radius: 4px;
+    color: #088178;
+    background-color: #fddde4;
+}
+
+.product-section .pro-collection{
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-around;
+    margin: 0 60px;
+}
+
+.product-section h1,
+.product-section p{
+    text-align: center;
+}
+
+.product-section .product-cart{
+    width: 280px;
+    border: 1px solid #ebebeb;
+    padding: 13px;
+    margin-bottom: 30px;
+    border-radius: 25px;
+    position: relative;
+    box-shadow: 20px 20px 30px rgba(0, 0, 0, 0.02);
+    transition: box-shadow 0.2s;
+}
+
+.product-section .product-cart:hover{
+    box-shadow: 20px 20px 30px rgba(0, 0, 0, 0.06);
+}
+
+.product-section .product-cart img{
+    width: 100%;
+    height: 50vh;
+    border-radius: 25px;
+}
+
+.product-section .product-cart span{
+    color: #969696;
+    font-weight: 500;
+    line-height: 30px;
+}
+
+.product-section .product-cart h4{
+    font-size: 18px;
+    color: rgb(41,41,41);
+}
+
+.product-section .product-cart .stars{
+    color: #e6ae2c;
+    padding: 6px 0;
+}
+
+.product-section .product-cart .price{
+    color: #088178;
+    padding: 4px 0;
+}
+
+.product-section .product-cart .buy-icon{
+    color: #088178;
+    background-color: #c7e9e75e;
+    padding: 15px;
+    position: absolute;
+    border-radius: 50px;
+    right: 10px;
+}
+
+#off-banner{
+    background-image: url(/Images/Banner/b2.jpg);
+    background-size: cover;
+    width: 100%;
+    height: 40vh;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+}
+
+#off-banner h4{
+    color: #eaebf0;
+}
+
+#off-banner h2{
+    color: #eaebf0;
+    padding: 20px 0;
+}
+
+button.normal{
+    font-size: 14px;
+    font-weight: 600px;
+    padding: 15px 30px;
+    color: #000;
+    border-radius: 4px;
+    border: none;
+    cursor: pointer;
+    outline: none;
+    background-color: #fff;
+    transition: 0.2s;
+}
+
+#banners{
+    margin: 0 60px;
+}
+
+#banners h2,h4,span{
+    color: rgb(248,248,248);
+}
+
+#banners .big-banners{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+#banners .big-banners div{
+    min-width: 500px;
+    margin: 15px;
+    height: 300px;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    justify-content: center;
+    padding: 20px;
+    background-size: cover;
+    backdrop-filter: blur(8%);
+}
+
+#banners .big-banners-1{
+    background-image: url(/Images/Banner/b17.jpg);
+}
+
+#banners .big-banners-2{
+    background-image: url(/Images/Banner/b10.jpg);
+}
+
+#banners .small-banners-1{
+    background-image: url(/Images/Banner/b7.jpg);
+}
+
+#banners .small-banners-2{
+    background-image: url(/Images/Banner/b4.jpg);
+}
+
+#banners .small-banners-3{
+    background-image: url(/Images/Banner/b8.jpg);
+}
+
+#banners .big-banners button{
+    margin-top: 20px;
+    padding: 12px 20px;
+    font-size: 16px;
+    font-weight: 500;
+    background-color: transparent;
+    color: rgb(248,248,248);
+    cursor: pointer;
+    transition: 0.3s ease;
+}
+
+#banners .big-banners div:hover button{
+    background-color: #088178;
+    border: 1px solid #088178;
+}
+
+#banners .small-banners{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+#banners .small-banners div{
+    min-width: 370px;
+    height: 200px;
+    margin: 15px;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    justify-content: center;
+    padding: 25px;
+    background-size: cover;
+}
+
+#banners .small-banners h2{
+    font-size: 25px;
+}
+
+#banners .small-banners h5{
+    color: #771818;
+}
+
+#newsletter{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    background-image: url(Images/Banner/b2.jpg);
+}
+
+#newsletter .news-letter-text span{
+    color: #e6ae2c;
+}
+
+#footer{
+    display: flex;
+    align-items: flex-start;
+    justify-content: space-between;
+    padding: 75px;
+    background-color: #acacac;
+}
+
+#footer p,#footer a{
+    text-decoration: none;
+    color: rgb(109,109,109);
+}
+
+#footer a:hover{
+    color: #088178;
+}
+
+#footer .about a{
+    display: block;
+    padding: 8px 0px;
+}
+
+#footer .myaccount a{
+    display: block;
+    padding: 8px 0;
+}
+
+#footer .download img{
+    border: 1px solid #08817989;
+    border-radius: 7px;
+}
